# instafix-llvm

.github/workflows/: clang-cir-tests.yml  libcxx-build-and-test.yaml
clang/include/clang/Driver/: Options.td
clang/include/clang/Frontend/: FrontendOptions.h
clang/lib/CIR/CodeGen/: CIRGenBuilder.h  CIRGenBuiltin.cpp  CIRGenBuiltinX86.cpp  CIRGenDecl.cpp  CIRGenExpr.cpp  CIRGenExprAgg.cpp  CIRGenExprConst.cpp  CIRGenExprScalar.cpp  CIRGenFunction.cpp  CIRGenFunction.h  CIRGenModule.cpp  CIRGenModule.h  CIRGenTBAA.cpp  CIRGenTypes.cpp  CIRGenTypes.h
clang/lib/CIR/Interfaces/: CIRLinkerInterface.cpp  CMakeLists.txt
clang/lib/Driver/: Driver.cpp
clang/test/: CMakeLists.txt  lit.cfg.py
clang/test/CIR/CodeGen/: agg-init.cpp  agg-init2.cpp  array-init.c  array-init.mlir  asm.c  (+38 more)
clang/tools/: CMakeLists.txt
lld/: CMakeLists.txt
llvm/: .gitignore
llvm/docs/: requirements-hashed.txt
llvm/lib/Linker/: IRMover.cpp  LinkModules.cpp
llvm/utils/git/: requirements.txt  requirements_formatting.txt
mlir/include/mlir/: InitAllDialects.h
mlir/lib/: CMakeLists.txt
mlir/lib/Dialect/: CMakeLists.txt
mlir/lib/IR/: BuiltinLinkerInterface.cpp  CMakeLists.txt
mlir/lib/Interfaces/: CMakeLists.txt
mlir/lib/LTO/: CMakeLists.txt  LTO.cpp
mlir/lib/Linker/: CMakeLists.txt  IRMover.cpp  Linker.cpp  LinkerInterface.cpp
mlir/lib/Tools/: CMakeLists.txt
mlir/test/CAPI/: llvm.c
mlir/test/mlir-link/: appending-linkage-b.mlir  appending-linkage-init-region.mlir  appending-linkage.mlir  common-linkage-c.mlir  external-decl-type-mismatch-reverse.mlir  external-decl-type-mismatch.mlir  function-signature-mismatch.mlir  global-structors-a.mlir  global-structors-b.mlir  multi-module-ctors-regression.mlir  personality.mlir  single-module-ctors-regression.mlir  single-module-no-ctors-regression.mlir  weak-linkage-e.mlir  weak-linkage-f.mlir
mlir/tools/: CMakeLists.txt
mlir/tools/mlir-link/: CMakeLists.txt  mlir-link.cpp
mlir/tools/mlir-lto/: CMakeLists.txt  mlir-lto.cpp
mlir/utils/vscode/: package-lock.json
(+110 files in other folders)
